[metadata]
name = editor-marke37
author = Carlos Ramos
author_email = carlos@ramoscarlos.com
description = Editor en línea realizado en Flask para letras de canciones en formato marke37.
url = https://github.com/ramoscarlos/editor-marke37
license = MIT
version = 1.0.0
packages = find:
[options]
install_requires =
	marke37